# livora

./: .gitignore  README.md  render.yaml
.agents/: CONTEXT.md
.agents/skills/meal-planner/: SKILL.md
.agents/skills/morning-briefing/: SKILL.md
.agents/skills/shopping-list/: SKILL.md
.agents/skills/task-manager/: SKILL.md
backend/: .env.example  capture.py  main.py  mcp_server.py  pyproject.toml  railway.toml
backend/agents/: livora_orchestrator.py  livora_orchestrator_backup.py
frontend/: fix_urls.py  index.html  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css
