[project]
name = "livora-backend"
version = "0.1.0"
description = "Backend ADK agents for LIVORA"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "fastapi",
    "uvicorn",
    "pydantic",
    "supabase",
    "python-dotenv",
    "requests",
    "tenacity",
    "mcp",
    "fastmcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
